# GANGOD_ENGINE

./: CMakeLists.txt  README.md  main.cpp
CORE/headers/: GANGOD-GEOMETRY.h  GANGOD-OBJ.h  GANGOD-RENDER.h
CORE/src/: GANGOD-GEOMETRY.cpp  GANGOD-OBJ.cpp  GANGOD-RENDER.cpp
editor/: UI.cpp  UI.h  main.cpp
shaders/: mainShader.frag  mainShader.vert
